--- a/UI.Web/Master.Master
+++ b/UI.Web/Master.Master
@@ -6,6 +6,31 @@
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
+    
+    
+    
+    <style>
+        #form1 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100vh;
+        }
+        #cartelErrorLabel{
+            color:red;
+        }
+        .divider{
+        width:5px;
+        height:auto;
+        display:inline-block;
+        }
+    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
+
+
+
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -13,21 +38,48 @@
     <table border="1" cellpadding="0" cellspacing="0" width="100%" height="100%"> 
         <!-- site header --> 
         <tr> 
-            <td colspan="2" align="center" class="wrapper">Site Header</td> 
+            <td colspan="2" align="center" class="wrapper">Academia</td> 
         </tr> 
 <tr> 
             <!-- site navigation --> 
             <td valign="top" width="150"> 
                 <table border="0" width="100%" cellpadding="4" cellspacing="0"> 
                     <tr> 
-                        <td align="center">Site Navigation</td> 
+                        <td align="center" id="SiteMenu">Site Navigation</td> 
                     </tr> 
                     <tr> 
-                        <td><a href="Login.aspx">Login</a></td> 
+                        <td><a href="Login.aspx" id="tdLogin">Login</a></td> 
                     </tr>
                     <tr> 
-                        <td><a href="Home.aspx">Home</a></td> 
-                    </tr>                    
+                        <td><a href="Home.aspx" id="tdHome">Home</a></td> 
+                    </tr>        
+                    <tr> 
+                        <td><a href="Alumnos_Inscripciones.aspx" id="tdInscripciones">Inscripciones</a></td> 
+                    </tr>   
+                    <tr> 
+                        <td><a href="Comisiones.aspx">Comisiones</a></td> 
+                    </tr>   
+                    <tr> 
+                        <td><a href="Cursos.aspx">Cursos</a></td> 
+                    </tr>   
+                    <tr> 
+                        <td><a href="Docentes_Cursos.aspx">Docentes</a></td> 
+                    </tr>   
+                    <tr> 
+                        <td><a href="Especialidades.aspx">Especialidades</a></td> 
+                    </tr>   
+                    <tr> 
+                        <td><a href="Personas.aspx">Datos Personales</a></td> 
+                    </tr>   
+                    <tr> 
+                        <td><a href="Planes.aspx">Planes</a></td> 
+                    </tr>   
+                    <tr> 
+                        <td><a href="Usuarios.aspx">Usuarios</a></td> 
+                    </tr>   
+                    <tr> 
+                        <td><a href="Materias.aspx">Materias</a></td> 
+                    </tr>   
                 </table> 
             </td> 
              
@@ -40,7 +92,7 @@
          
         <!-- site footer --> 
         <tr> 
-            <td colspan="2" align="center">Site Footer</td> 
+            <td colspan="2" align="center">Integrantes: Navarro Franco y Santolari Matias</td> 
         </tr> 
     </table> 
     </form> 
