actualizacion master page, agregado de seguridad
la funcionalidad de la master page esta terminada (solo faltaria el mejorar el diseño que es opcional), ademas el agregado de seguridad se refiere a que, ahora cuando una persona que no tenga usuario quiera entrar mediante los links a las diferentes paginas, este no verá nada.

--- a/UI.Web/Master.Master
+++ b/UI.Web/Master.Master
@@ -45,11 +45,8 @@
             <td valign="top" width="150"> 
                 <table border="0" width="100%" cellpadding="4" cellspacing="0"> 
                     <tr> 
-                        <td align="center" id="SiteMenu">Site Navigation</td> 
+                        <td align="center" id="Menu Lateral">Menu Lateral</td> 
                     </tr> 
-                    <tr> 
-                        <td><a href="Login.aspx" id="tdLogin">Login</a></td> 
-                    </tr>
                     <tr> 
                         <td><a href="Home.aspx" id="tdHome">Home</a></td> 
                     </tr>        
